tests/failing/test13.tail
let v1:[int]2 = reshape{[int],[1,2]}([3,2],iotaV(5)) in
let v2:[int]2 = transp{[int],[2]}(v1) in
let v9:[int]3 = transp2{[int],[3]}([2,1,3],reshape{[int],[2,3]}([3,3,2],v1)) in
let v15:[int]3 = transp2{[int],[3]}([1,3,2],reshape{[int],[2,3]}([3,2,3],v2)) in
let v20:[int]2 = reduce{[int],[2]}(addi,0,zipWith{[int,int,int],[3]}(muli,v9,v15)) in
i2d(reduce{[int],[0]}(muli,1,reduce{[int],[1]}(addi,0,v20)))
